plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.143'
    id 'idea'
}

version = mod_version
group = mod_group_id

base {
    archivesName = "${mod_id}-${minecraft_version}-neoforge"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

repositories {
    mavenCentral()
    maven { url = 'https://api.modrinth.com/maven' }
    maven { url = 'https://modmaven.dev/' }
    maven { url = 'https://maven.blamejared.com' }
    // The public endpoint redirects binary artifacts into /releases. Pointing
    // Gradle there directly avoids resolving only the POM without the mod JAR.
    maven { url = 'https://maven.blakesmods.com/releases' }
    maven {
        url = 'https://www.cursemaven.com'
        content { includeGroup 'curse.maven' }
    }
}

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = 'gameTestServer'
            // Keep dependency-matrix tests away from the playable lab save. A
            // minimal run intentionally omits optional block registries and
            // would otherwise replace those machines with air when saving.
            gameDirectory = file('run-gametest')
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all',
                    '--output', file('src/generated/resources/').absolutePath,
                    '--existing', file('src/main/resources/').absolutePath
        }

        configureEach {
            logLevel = org.slf4j.event.Level.INFO
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources {
    srcDir('src/generated/resources')
    srcDir(layout.buildDirectory.dir('generated/resources/gameTest'))
}

def generateGameTestTemplate = tasks.register('generateGameTestTemplate') {
    def outputFile = layout.buildDirectory.file(
            'generated/resources/gameTest/data/aeallpattern/structure/empty.nbt')
    outputs.file(outputFile)
    doLast {
        def encoded = 'H4sIAAAAAAAA/2WPwU4DMQxEB7Yt2VSo3PgXzpwRJ64r79YtLtk4SixV8PUkKmUPteSDPfZongd6rIr8cAeg9d21eziOJiZc0KrHZgw6fRXfVI8ujuawPUikMBQjYzzOEnnKdLAXkuywijQznpftrOMwaayjadOTasBu0XlO9u2wPqlEg8saAo2BHe5lj6fl7iTHQmeHjVE+st1Y1LBd0nJl+q8O60vSC9BDosBm/Efk37Mmzo24gmmWyk8mGuH3eo5D1GyfqLHfGtZNnOq+fSWjD86lPWFX8AuuiQ4xYAEAAA=='
        def target = outputFile.get().asFile
        target.parentFile.mkdirs()
        target.bytes = Base64.decoder.decode(encoded)
    }
}

tasks.named('processResources').configure {
    dependsOn(generateGameTestTemplate)
}

// ModDev keeps the Minecraft/NeoForge classpath scoped to the main source set.
// Persistence codec tests need the same mapped classes without launching a game.
sourceSets.test.compileClasspath += sourceSets.main.compileClasspath
sourceSets.test.runtimeClasspath += sourceSets.main.runtimeClasspath

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    // AE2 is required and supplies the public crafting-provider API.
    implementation "org.appliedenergistics:appliedenergistics2:${ae2_version}"

    // Optional client recipe-viewer bridges. EMI + TMRV replace the JEI runtime,
    // but still expose JEI integrations to the scanner through TMRV.
    compileOnly "maven.modrinth:emi:1.1.24+1.21.1+neoforge"
    compileOnly "maven.modrinth:yFypjcfd:pEhG9g9P"
    compileOnly "maven.modrinth:cloth-config:15.0.140+neoforge"
    localRuntime "maven.modrinth:cloth-config:15.0.140+neoforge"

    // Mekanism is optional. Keep its classes out of common signatures and load adapters conditionally.
    compileOnly "mekanism:Mekanism:${mekanism_version}:api"
    if (project.property('runtime_mekanism').toBoolean()) {
        localRuntime "mekanism:Mekanism:${mekanism_version}:all"
    }

    // JEI is optional and client-only. The server recipe index must not depend on it.
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    if (project.property('runtime_emi').toBoolean()) {
        localRuntime "maven.modrinth:emi:1.1.24+1.21.1+neoforge"
        localRuntime "maven.modrinth:yFypjcfd:pEhG9g9P"
    } else if (project.property('runtime_jei').toBoolean()) {
        localRuntime "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
    }
    if (project.property('runtime_jei').toBoolean()
            || project.property('runtime_emi').toBoolean()) {
        localRuntime "curse.maven:ae2-jei-integration-1074338:${ae2_jei_integration_file_id}"
    }

    // Reuse AE's extensible JEI converter registry. Applied Mekanistics adds
    // Mekanism chemicals to that same registry and owns their transport logic.
    compileOnly "curse.maven:ae2-jei-integration-1074338:${ae2_jei_integration_file_id}"
    compileOnly "curse.maven:applied-mekanistics-574300:${applied_mekanistics_file_id}"
    if ((project.property('runtime_jei').toBoolean()
            || project.property('runtime_emi').toBoolean())
            && project.property('runtime_mekanism').toBoolean()) {
        localRuntime "curse.maven:applied-mekanistics-574300:${applied_mekanistics_file_id}"
    }

    // Runtime-only generic JEI compatibility fixture. No Mystical Agriculture
    // classes are referenced by the implementation.
    if (project.property('runtime_mystical_agriculture').toBoolean()) {
        // Their published POMs contain no packaging metadata, so request the
        // binary artifacts explicitly for the development runtime fixture.
        localRuntime "com.blakebr0.cucumber:Cucumber:${cucumber_version}@jar"
        localRuntime "com.blakebr0.mysticalagriculture:MysticalAgriculture:${mystical_agriculture_version}@jar"
    }

    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test', Test).configure {
    useJUnitPlatform()
}

tasks.named('jar', Jar).configure {
    from(rootProject.file('LICENSE')) {
        into 'META-INF'
    }
    from(rootProject.file('NOTICE.md')) {
        into 'META-INF'
    }
    from(rootProject.file('third_party/thunderbolt-core/LICENSE')) {
        into 'META-INF/licenses'
        rename { 'routing-engine-LGPL-3.0.txt' }
    }
    manifest {
        attributes(
                'Specification-Title': mod_id,
                'Specification-Vendor': mod_authors,
                'Specification-Version': '1',
                'Implementation-Title': mod_name,
                'Implementation-Version': mod_version,
                'Implementation-Vendor': mod_authors,
                'Automatic-Module-Name': mod_group_id,
        )
    }
}

def generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
    def replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_authors            : mod_authors,
            mod_credits            : mod_credits,
            mod_version            : mod_version,
            ae2_version_range      : ae2_version_range,
            mekanism_version_range : mekanism_version_range,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from 'src/main/templates'
    into 'build/generated/sources/modMetadata'
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

def releaseVersion = providers.gradleProperty('mod_version')
def generatedMetadataFile = layout.buildDirectory.file(
        'generated/sources/modMetadata/META-INF/neoforge.mods.toml')
def readmeFile = layout.projectDirectory.file('README.md')

def verifyReleaseMetadata = tasks.register('verifyReleaseMetadata') {
    dependsOn(generateModMetadata)
    inputs.property('releaseVersion', releaseVersion)
    inputs.file('gradle.properties')
    inputs.file(readmeFile)
    inputs.file('src/main/templates/META-INF/neoforge.mods.toml')
    doLast {
        def expectedVersion = releaseVersion.get()
        if (expectedVersion.endsWith('-dev')) {
            throw new GradleException('Release version must not use the -dev suffix')
        }
        def metadata = generatedMetadataFile.get().asFile.text
        if (!metadata.contains("version=\"${expectedVersion}\"")) {
            throw new GradleException('Generated mod metadata does not match the project version')
        }
        if (!readmeFile.asFile.text.contains(expectedVersion)) {
            throw new GradleException('README compatibility table must contain the release version')
        }
    }
}

def releaseJar = tasks.named('jar', Jar).flatMap { it.archiveFile }
def verifyReleaseJar = tasks.register('verifyReleaseJar') {
    dependsOn(tasks.named('jar'))
    inputs.file(releaseJar)
    doLast {
        def archive = releaseJar.get().asFile
        def zip = new java.util.zip.ZipFile(archive)
        try {
            def names = zip.entries().collect { it.name } as Set
            for (required in [
                    'META-INF/neoforge.mods.toml',
                    'META-INF/LICENSE',
                    'META-INF/NOTICE.md',
                    'META-INF/licenses/routing-engine-LGPL-3.0.txt',
                    'icon.png',
                    'assets/aeallpattern/textures/item/pattern_binder.png',
                    'assets/aeallpattern/textures/block/pattern_linker.png',
                    'assets/aeallpattern/textures/block/tianshu/tianshu_pattern_selector.png',
                    'assets/aeallpattern/models/block/tianshu_pattern_selector.json']) {
                if (!names.contains(required)) {
                    throw new GradleException("Release JAR is missing ${required}")
                }
            }
            if (names.contains('META-INF/jarjar/metadata.json')
                    || names.any { it.startsWith('META-INF/jarjar/') }) {
                throw new GradleException('Release JAR must not contain nested mods')
            }
            if (names.any { it.startsWith('com/moakiee/thunderbolt/') }) {
                throw new GradleException('Release JAR must not expose the upstream Thunderbolt package')
            }
            if (names.any { it.startsWith('appeng/') || it.startsWith('mekanism/') || it.startsWith('mezz/jei/') }) {
                throw new GradleException('Release JAR unexpectedly contains upstream classes')
            }
            def metadataEntry = zip.getEntry('META-INF/neoforge.mods.toml')
            def metadata = zip.getInputStream(metadataEntry).getText('UTF-8')
            if (metadata =~ /(?i)modId\s*=\s*"thunderbolt"/) {
                throw new GradleException('Release JAR must not require or declare Thunderbolt')
            }
        } finally {
            zip.close()
        }
    }
}

tasks.named('check').configure {
    dependsOn(verifyReleaseMetadata, verifyReleaseJar)
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
